test/expected/large/dataagentmanagement/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dataagentservices
    foo.com/duversion: 1.2.45-20190924.1569376755793
    foo.com/version: 1.2.45
  labels:
    app.kubernetes.io/name: dataagentservices
    helm.sh/chart: dataagentservices-1.2.45
  name: dataagentmanagement
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataAgentManagement
    - uri:
        prefix: /dataAgentManagement/
    route:
    - destination:
        host: dataagentmanagement.peekay.svc.cluster.local
